--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Node</title>
+	<title>Pawsible</title>
 	<meta name="description"
 		content="Master skateboarding with Trickster — your interactive learning app. Watch tutorials, practice tricks, track progress and become a pro skater step by step." />
 	<meta name="keywords"
