--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,25 +1,24 @@
 <section class="hero">
-	<div class="container">
-		<h1 class="hero__title">Download, <br class="mobileOnly"> play, enjoy
-		</h1>
 
-
-
-		<div class="hero__lines">
-			<div class="hero__lines-left">
-				<img class="hero__lines-left-1" src="../../img/hero/hero_1.png" srcset="../../img/hero/hero_1@2x.png" alt="Alt">
-			</div>
-			<div class="hero__line hero__line-anim">
-				<img src="../../img/hero/hero_2.png" srcset="../../img/hero/hero_2@2x.png" alt="Alt">
-			</div>
-			<div class="hero__lines-right">
-				<img src="../../img/hero/hero_3.png" srcset="../../img/hero/hero_3@2x.png" alt="Alt">
+	<section class="lines">
+		<div class="lines_container">
+			<div class="content">
+				<div class="cards">
+					<div class="card card-text">Pawsible</div>
+					<div class="card card-text">Pawsible</div>
+					<div class="card card-text">Pawsible</div>
+					<div class="card card-text">Pawsible</div>
+					<div class="card card-text">Pawsible</div>
+				</div>
 			</div>
 		</div>
+	</section>
 
+	<div class="hero__content">
+		<img class="hero__img" src="../../img/hero/hero.png" srcset="../../img/hero/hero@2x.png" alt="Alt">
 		<p class="hero__text">
-			Discover a world of games across every platform, thoughtfully curated just for you. Whether you're a seasoned
-			player or just starting out, we've got something that will speak to your gaming soul.
+			Expert, trusted, and insured pet care — from walks to wellness — right at your doorstep. Book a vetted carer in
+			minutes.
 		</p>
 		<a href="#!" class="main__button">
 			<span class="main__button-text">Get the game</span>
