--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -21,7 +21,8 @@
 			minutes.
 		</p>
 		<a href="#!" class="main__button">
-			<span class="main__button-text">Get the game</span>
+			<span class="main__button-text">Get the app</span>
 		</a>
 	</div>
+
 </section>
