--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -40,4 +40,10 @@
 		</a>
 	</div>
 
+	<img class="hero__paw hero__paw-1" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-2" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-3" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-4" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-5" src="../../img/paw/paw.svg" alt="paw">
+
 </section>
