--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -42,8 +42,8 @@
 
 	<img class="hero__paw hero__paw-1" src="../../img/paw/paw.svg" alt="paw">
 	<img class="hero__paw hero__paw-2" src="../../img/paw/paw.svg" alt="paw">
-	<img class="hero__paw hero__paw-3" src="../../img/paw/paw.svg" alt="paw">
-	<img class="hero__paw hero__paw-4" src="../../img/paw/paw.svg" alt="paw">
-	<img class="hero__paw hero__paw-5" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-3 desktopOnly" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-4 desktopOnly" src="../../img/paw/paw.svg" alt="paw">
+	<img class="hero__paw hero__paw-5 desktopOnly" src="../../img/paw/paw.svg" alt="paw">
 
 </section>
