--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,28 +1,20 @@
 <section class="about" id="about">
 	<div class="container">
 		<div class="title__wrapper">
-			<p class="subtitle">
-				<span>About us</span>
+			<div class="subtitle">
+				<img src="../../img/paw/paw.svg" alt="paw">
+				<h2>About Pawsible</h2>
+			</div>
+			<p class="title">
+				For pet parents who expect more. A service built on trust, <br class="desktopOnly"> transparency, and tail wags.
+				We treat every pet as if
+				they <br class="desktopOnly"> were our own. We believe your furry family members <br class="desktopOnly">
+				deserve the best.
 			</p>
-			<h2 class="title">
-				About us
-			</h2>
 		</div>
 
-		<div class="about__content">
-			<div class="about__content__img">
-				<img src="../../img/about/about.jpg" srcset="../../img/about/about@2x.jpg" alt="about">
-			</div>
-			<div class="about__content__text">
-				<div class="about__content__text-title">
-					At Node, we’re more than just developers — we’re storytellers, dreamers, and gamers at heart.
-				</div>
-				<div class="about__content__text-description">
-					Founded by a team of industry veterans with decades of combined experience, we’ve dedicated ourselves to
-					creating games that inspire and entertain. Whether it’s a small indie project or a blockbuster title, we pour
-					our creativity and expertise into every pixel, ensuring each game resonates with players around the globe.
-				</div>
-			</div>
+		<div class="about__cards">
+
 		</div>
 	</div>
 
