--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,7 +27,7 @@
 
 		@@include('blocks/about.html')
 
-		@@include('blocks/why.html')
+		@@include('blocks/benefits.html')
 
 		@@include('blocks/games.html')
 
