--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,8 @@
 
 		@@include('blocks/benefits.html')
 
+		@@include('blocks/contacts.html')
+
 		@@include('blocks/footer.html')
 	</main>
 	<script src="./js/index.bundle.js"></script>
