--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -22,12 +22,10 @@
 		<div class="contacts__content__cards">
 			<div class="contacts__content__text">
 				<div class="contacts__content__text-title">
-					Vetted & Insured
+					Address
 				</div>
 				<div class="contacts__content__text-description">
-					Every carer passes a comprehensive background check and is fully insured for your peace of mind. We verify
-					experience and require pet first aid certification so you can relax knowing your companion is in capable
-					hands.
+					1234 Innovation Boulevard, Suite 567 Austin, TX 78701, United States
 				</div>
 			</div>
 			<div class="contacts__content__text">
@@ -35,17 +33,15 @@
 					Real-Time Updates
 				</div>
 				<div class="contacts__content__text-description">
-					Never miss a moment of your pet's day. Get GPS-tracked walk maps, adorable photo updates, and detailed reports
-					sent directly to your phone. It's the next best thing to being there yourself.
+					<a href="tel:+18447297425">+1 844 729-7425</a>
 				</div>
 			</div>
 			<div class="contacts__content__text">
 				<div class="contacts__content__text-title">
-					Tailored to Your Pet
+					Email
 				</div>
 				<div class="contacts__content__text-description">
-					We understand every pet is unique. Our smart matching connects you with carers who specialize in your pet's
-					breed, energy level, and specific needs, ensuring they receive the perfect level of care and attention.
+					<a href="mailto:hello@pawsible.com">hello@pawsible.com</a>
 				</div>
 			</div>
 		</div>
