--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,8 @@
 
 		@@include('blocks/benefits.html')
 
+		@@include('blocks/cta.html')
+
 		@@include('blocks/billboard.html')
 
 		@@include('blocks/contacts.html')
