--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,6 +31,8 @@
 
 		@@include('blocks/cta.html')
 
+		@@include('blocks/rewards.html')
+
 		@@include('blocks/billboard.html')
 
 		@@include('blocks/contacts.html')
