--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,6 +35,8 @@
 
 		@@include('blocks/rewards.html')
 
+		@@include('blocks/what.html')
+
 		@@include('blocks/billboard.html')
 
 		@@include('blocks/contacts.html')
