--- a/src/html/blocks/what.html
+++ b/src/html/blocks/what.html
@@ -66,12 +66,14 @@
 	<div class="text_wrapper text_wrapper-mobile">
 		<div class="what__pets">
 			<div class="what__pet active">
-				<div class="what__pet-img">
-					<img src="../../img/what/testimonials_1.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
-				</div>
-				<div class="what__pet__text">
-					<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-					<div class="what__pet-instagram">@sarah_kith</div>
+				<div class="what__pet-profile">
+					<div class="what__pet-img">
+						<img src="../../img/what/testimonials_1.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
+					</div>
+					<div class="what__pet__text">
+						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
+						<div class="what__pet-instagram">@sarah_kith</div>
+					</div>
 				</div>
 				<div class="text text-1">
 					"As a first-time dog owner, I was incredibly anxious about leaving Bailey with anyone. From the moment we met
@@ -83,12 +85,14 @@
 				</div>
 			</div>
 			<div class="what__pet">
-				<div class="what__pet-img">
-					<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
-				</div>
-				<div class="what__pet__text">
-					<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-					<div class="what__pet-instagram">@sarah_kith</div>
+				<div class="what__pet-profile">
+					<div class="what__pet-img">
+						<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
+					</div>
+					<div class="what__pet__text">
+						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
+						<div class="what__pet-instagram">@sarah_kith</div>
+					</div>
 				</div>
 				<div class="text text-2">
 					"Bringing home Luna was a joy, but as first-time puppy owners, we were quickly overwhelmed. From the very
@@ -100,12 +104,14 @@
 				</div>
 			</div>
 			<div class="what__pet">
-				<div class="what__pet-img">
-					<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
-				</div>
-				<div class="what__pet__text">
-					<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-					<div class="what__pet-instagram">@sarah_kith</div>
+				<div class="what__pet-profile">
+					<div class="what__pet-img">
+						<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
+					</div>
+					<div class="what__pet__text">
+						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
+						<div class="what__pet-instagram">@sarah_kith</div>
+					</div>
 				</div>
 				<div class="text text-3">
 					"Our Samoyed, Rocky, is our pride and joy, but high energy requires a carer who is both knowledgeable and
