--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,12 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Pawsible</title>
+	<title>Pawsible — Trusted Pet Care, Dog Walking & Wellness Near You</title>
 	<meta name="description"
-		content="Master skateboarding with Trickster — your interactive learning app. Watch tutorials, practice tricks, track progress and become a pro skater step by step." />
+		content="Expert, insured pet care you can trust. Book vetted dog walkers and pet sitters in minutes and get real-time GPS updates, photos, and detailed visit reports." />
 	<meta name="keywords"
-		content="Trickster, skateboarding app, learn skateboarding, skateboard tricks, skate tutorials, progress tracker, skateboarding for beginners, skateboarding course, skateboarding training" />
-
+		content="Pawsible, pet care, dog walking, cat sitting, pet sitter, insured walkers, GPS walk tracking, real-time pet updates, puppy care, pet wellness, trusted pet carers" />
 
 	<link rel="stylesheet" href="./css/main.css" />
 	<link rel="icon" type="image/x-icon" href="../img/favicons/favicon.png">
