--- a/src/html/thanks.html
+++ b/src/html/thanks.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Thank You — Node</title>
+	<title>Pawsible — Trusted Pet Care, Dog Walking & Wellness Near You</title>
 	<meta name="description"
-		content="Thank you for connecting with Node. Your request has been received — we’ll be in touch soon. Meanwhile, explore more games and experiences on our platform." />
+		content="Expert, insured pet care you can trust. Book vetted dog walkers and pet sitters in minutes and get real-time GPS updates, photos, and detailed visit reports." />
 	<meta name="keywords"
-		content="Node thank you, Node confirmation, request received, Node games, game platform, gaming community" />
+		content="Pawsible, pet care, dog walking, cat sitting, pet sitter, insured walkers, GPS walk tracking, real-time pet updates, puppy care, pet wellness, trusted pet carers" />
 
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" type="image/x-icon" href="../img/favicons/favicon.png">
