--- a/src/html/blocks/mobile-nav.html
+++ b/src/html/blocks/mobile-nav.html
@@ -4,9 +4,9 @@
 		<div class="border_wrapper">
 			<ul class="mobile-nav__list">
 				<li><a href="index.html#about" class="nav__link active">About us</a></li>
-				<li><a href="index.html#games" class="nav__link">Games</a></li>
-				<li><a href="index.html#news" class="nav__link">News</a></li>
-				<li><a href="index.html#partners" class="nav__link">Partners</a></li>
+				<li><a href="index.html#benefits" class="nav__link">Benefits</a></li>
+				<li><a href="index.html#how" class="nav__link">How it works</a></li>
+				<li><a href="index.html#rewards" class="nav__link">Rewards</a></li>
 				<li><a href="index.html#contacts" class="nav__link">Contacts</a></li>
 				<li><a href="#!" class="nav__link">Get the game</a></li>
 			</ul>
