--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="contacts__content__text">
 				<div class="contacts__content__text-title">
-					Real-Time Updates
+					Phone number
 				</div>
 				<div class="contacts__content__text-description">
 					<a href="tel:+18447297425">+1 844 729-7425</a>
