--- a/src/html/blocks/what.html
+++ b/src/html/blocks/what.html
@@ -2,7 +2,7 @@
 	<div class="title__wrapper">
 		<div class="subtitle">
 			<img src="../../img/paw/paw.svg" alt="paw">
-			<h2>What our clients say</h2>
+			<h2>What our <br class="mobileOnly"> clients say</h2>
 		</div>
 		<p class="title title-bold">
 			Don't just take our word for it. Here's what our community has to say about the Pawsible experience!
@@ -25,8 +25,8 @@
 					<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 				</div>
 				<div class="what__pet__text">
-					<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-					<div class="what__pet-instagram">@sarah_kith</div>
+					<div class="what__pet-name">The Johnson Family <br> & Puppy Luna</div>
+					<div class="what__pet-instagram">@josephjohn</div>
 				</div>
 			</div>
 			<div class="what__pet">
@@ -34,8 +34,8 @@
 					<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 				</div>
 				<div class="what__pet__text">
-					<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-					<div class="what__pet-instagram">@sarah_kith</div>
+					<div class="what__pet-name">helen M. & <br> Samoyed Rocky</div>
+					<div class="what__pet-instagram">@helen_mirren</div>
 				</div>
 			</div>
 		</div>
@@ -90,8 +90,8 @@
 						<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">The Johnson Family <br> & Puppy Luna</div>
+						<div class="what__pet-instagram">@josephjohn</div>
 					</div>
 				</div>
 				<div class="text text-2">
@@ -109,8 +109,8 @@
 						<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">helen M. & <br> Samoyed Rocky</div>
+						<div class="what__pet-instagram">@helen_mirren</div>
 					</div>
 				</div>
 				<div class="text text-3">
@@ -146,8 +146,8 @@
 						<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">The Johnson Family <br> & Puppy Luna</div>
+						<div class="what__pet-instagram">@josephjohn</div>
 					</div>
 				</div>
 				<div class="text text-2">
@@ -165,8 +165,8 @@
 						<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">helen M. & <br> Samoyed Rocky</div>
+						<div class="what__pet-instagram">@helen_mirren</div>
 					</div>
 				</div>
 				<div class="text text-3">
@@ -202,8 +202,8 @@
 						<img src="../../img/what/testimonials_2.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">The Johnson Family <br> & Puppy Luna</div>
+						<div class="what__pet-instagram">@josephjohn</div>
 					</div>
 				</div>
 				<div class="text text-2">
@@ -221,8 +221,8 @@
 						<img src="../../img/what/testimonials_3.png" srcset="../../img/what/testimonials_1@2x.png" alt="pet">
 					</div>
 					<div class="what__pet__text">
-						<div class="what__pet-name">Sarah K. <br> & Labrador Bailey</div>
-						<div class="what__pet-instagram">@sarah_kith</div>
+						<div class="what__pet-name">helen M. & <br> Samoyed Rocky</div>
+						<div class="what__pet-instagram">@helen_mirren</div>
 					</div>
 				</div>
 				<div class="text text-3">
